--- a/src/main/resources/myProp.properties
+++ b/src/main/resources/myProp.properties
@@ -3,4 +3,7 @@ rds_hostname=database-2.cigneptuznne.us-west-2.rds.amazonaws.com
 rds_username=slikemebro
 rds_password=Gfnhjy1801
 rds_port=5432
-count=0
+count_of_addresses=9
+count_of_products=500
+max_quantity=300
+max_sum_of_quantity=3000000
