--- a/src/main/resources/myProp.properties
+++ b/src/main/resources/myProp.properties
@@ -6,4 +6,7 @@ rds_port=5432
 count_of_addresses=9
 count_of_products=100
 max_quantity=300
-max_sum_of_quantity=3000000
+max_sum_of_quantity=2000000
+count_properties_of_goods=4
+size_of_multi=1000
+size_of_batch=1000
