--- a/src/main/resources/myProp.properties
+++ b/src/main/resources/myProp.properties
@@ -3,10 +3,16 @@ rds_hostname=database-2.cigneptuznne.us-west-2.rds.amazonaws.com
 rds_username=slikemebro
 rds_password=Gfnhjy1801
 rds_port=5432
+
 count_of_addresses=9
-count_of_products=100
+count_of_types=100
 max_quantity=300
-max_sum_of_quantity=132000
-count_properties_of_goods=4
+
+count_properties_of_goods=3
+count_properties_of_products=2
+
+max_sum_of_goods=1000000
+max_products=334000
+
 size_of_multi=1000
 size_of_batch=1000
